--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -223,8 +223,8 @@
                             Economy which is awarded to only 40 Students in Luxembourg each year
                         </p>
 
-                        <a href="MISSING" class="normal-link" target="_blank">
-                            MISSING<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                        <a href="/assets/pdf/CNPSES-Certificat-GCC.pdf" class="normal-link" target="_blank">
+                            CNPSES-Certificat-GCC.pdf<img src="/assets/svg/logos/link.svg" alt="link symbol">
                         </a>
                     </div>
 
@@ -273,7 +273,7 @@
                         </p>
 
                         <a href="/assets/pdf/Mini-Entreprise-CLIK-2023.pdf" class="normal-link" target="_blank">
-                            Mini-Entreprise-CLIK-2023.pdf BAD RESOLUTION RETAKE<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                            Mini-Entreprise-CLIK-2023.pdf<img src="/assets/svg/logos/link.svg" alt="link symbol">
                         </a>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                             <div class="accordion-item">
                                 <span class="gray-1">Relevant Coursework</span>
                                 <button class="accordion-header" aria-expanded="false">
-                                    Discipline: Business Economics
+                                    Business Economics
                                 </button>
 
                                 <div class="accordion-content" hidden>
@@ -317,7 +317,7 @@
 
                             <div class="accordion-item">
                                 <button class="accordion-header" aria-expanded="false">
-                                    Discipline: Political Economy
+                                    Political Economy
                                 </button>
 
                                 <div class="accordion-content" hidden>
@@ -329,67 +329,13 @@
 
                             <div class="accordion-item">
                                 <button class="accordion-header" aria-expanded="false">
-                                    Discipline: Accountancy
+                                    Accountancy
                                 </button>
 
                                 <div class="accordion-content" hidden>
                                     The “accounting” course encourages pupils to acquire the essential rules 
                                     governing accounting techniques, enabling them to compile, audit, and 
                                     check a company's accounts.
-                                </div>
-                            </div>
-
-                            <div class="accordion-item">
-                                <button class="accordion-header" aria-expanded="false">
-                                    Discipline: Professional Communication and human relations
-                                </button>
-
-                                <div class="accordion-content" hidden>
-                                    The course on “professional communication and human relations” encourages pupils 
-                                    to acquire knowledge and skills specific to professional communication so they 
-                                    can autonomously use and adapt them to situations in working life, incorporating 
-                                    language skills (French, German, English). Additionally, the pupils are able to 
-                                    write commercial letters of any kind.
-                                </div>
-                            </div>
-
-                            <div class="accordion-item">
-                                <button class="accordion-header" aria-expanded="false">
-                                    Discipline: Organisation and Office Management
-                                </button>
-
-                                <div class="accordion-content" hidden>
-                                    The course on “organisation and management of activities” encourages pupils to 
-                                    discover and implement varied techniques for organization and management, making 
-                                    good use of technological resources to develop their ability to work and assist 
-                                    others in organizational tasks.
-                                </div>
-                            </div>
-
-                            <div class="accordion-item">
-                                <button class="accordion-header" aria-expanded="false">
-                                    Discipline:  Information and Communication Technologies
-                                </button>
-
-                                <div class="accordion-content" hidden>
-                                    The aim of the course on “information and communication technologies” is to study 
-                                    the functioning of software that enables an organization (company, administration, 
-                                    or association) to manage and communicate its data. It prepares pupils for working 
-                                    life and higher studies.
-                                </div>
-                            </div>
-
-                            <div class="accordion-item">
-                                <button class="accordion-header" aria-expanded="false">
-                                    Discipline:  Knowledge of the Contemporary World
-                                </button>
-
-                                <div class="accordion-content" hidden>
-                                    The course on “knowledge of the contemporary world" provides pupils with the necessary 
-                                    elements to understand the contemporary world in all its complexity. Knowledge and 
-                                    skills in areas as diverse as recent history, geography, political economy, society, 
-                                    and contemporary geopolitics enable pupils to develop their critical faculties and act 
-                                    as free, aware, and responsible citizens.
                                 </div>
                             </div>
                         </div>
@@ -406,7 +352,7 @@
                         <span class="gray-1">Since 2024</span>
                         <span class="white-2">Photo Editing</span>
                         <p>
-                            
+                            I enjoy transforming moments into visual stories through meticulous photo editing.
                         </p>
                     </div>
 
@@ -414,7 +360,7 @@
                         <span class="gray-1">Since 2023</span>
                         <span class="white-2">Web Development</span>
                         <p>
-                            
+                            Creating seamless digital experiences through coding has become one of my passions.
                         </p>
                     </div>
 
@@ -422,7 +368,7 @@
                         <span class="gray-1">Since 2022</span>
                         <span class="white-2">Physical Exercise</span>
                         <p>
-                            
+                            Maintaining a healthy body and mind through regular physical exercise fuels my daily energy.
                         </p>
                     </div>
 
@@ -430,7 +376,7 @@
                         <span class="gray-1">Since 2018</span>
                         <span class="white-2">Graphic Design</span>
                         <p>
-                            
+                            Crafting compelling visuals that communicate ideas effectively is where my creativity thrives.
                         </p>
                     </div>
                 </div>
@@ -476,7 +422,7 @@
         <div class="two-columns">
             <div class="container">
                 <div class="flex-title">
-                    <h4>Marble Manufacturer</h4>
+                    <h4>March</h4>
                     <span class="title-1">2017</span>
                 </div>
                 <div class="column-list">
@@ -485,8 +431,7 @@
                         <span class="gray-1">Informational Internship</span>
                         <span class="white-2">Lampertz Stone Designer</span>
                         <p>
-                            A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                            Marble Manufacturer
                         </p>
                     </div>
 
@@ -526,18 +471,17 @@
 
             <div class="container">
                 <div class="flex-title">
-                    <h4>Pharmacy</h4>
+                    <h4>November</h4>
                     <span class="title-1">2016</span>
                 </div>
 
                 <div class="column-list">
                     <div class="column-box">
                         <img src="/assets/svg/logos/pharmacie-hosingen-logo.svg" alt="Pharmacie Hosingen Logo">
-                        <span class="gray-1">Information Internship</span>
-                        <span class="white-2">Lampertz Stone Designer</span>
+                        <span class="gray-1">Practical Internship</span>
+                        <span class="white-2">Pharmacie de Hosingen</span>
                         <p>
-                            A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                            Pharmacy
                         </p>
                     </div>
 
@@ -1318,7 +1262,7 @@
                                 <div class="tech-list">
                                     <div class="tooltip">
                                         <a href="https://affinity.serif.com/en-us/photo/" target="_blank">
-                                            <img src="/assets/svg/logos/photo-icon.svg" alt="Affinity Designer">
+                                            <img src="/assets/svg/logos/photo-icon.svg" alt="Affinity Photo">
                                         </a>
                                         
                                         <span class="tooltiptext">Affinity Photo</span>
@@ -1352,7 +1296,7 @@
                                 <div class="tech-list">
                                     <div class="tooltip">
                                         <a href="https://affinity.serif.com/en-us/publisher/" target="_blank">
-                                            <img src="/assets/svg/logos/photo-icon.svg" alt="Affinity Publisher">
+                                            <img src="/assets/svg/logos/publisher-icon.svg" alt="Affinity Publisher">
                                         </a>
                                         
                                         <span class="tooltiptext">Affinity Publisher</span>
