--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,16 @@
         </main>
 
         <footer>
-            <p>Copright - <%= new Date().getFullYear() %></p>
+            <div>
+                <a href="#hero" class="cv-logo">
+                    CV
+                </a>
+                <p>Copyright &#169; - <%= new Date().getFullYear() %></p>
+            </div>
+            
+            <div>
+                <a class="normal-link" href="/terms" target="_blank">Private Policy<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+            </div>
         </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
