--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,10 @@
 <body>
     <header>
         <div class="header-wrapper">
-            <div class="header-container">
-                <a href="#hero">CV</a>
-            </div>
-
+            <a href="#hero" class=" header-container cv-logo">
+                CV
+            </a>
+         
             <div class="header-container">
                 <ul class="dropdown-menu">
                     <li><a href="/fr">Français</a></li>
@@ -18,12 +18,14 @@
 
     
     <nav class="off-canvas-menu">
-        <button class="close-btn">&times;</button>
+        <button class="close-btn">CLOSE</button>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#goal">Goal</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
