--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,13 +11,13 @@
                     <li><a href="/de">Deutsch</a></li>
                 </ul>
 
-                <div class="menu-toggle">☰ Menu</div>
+                <div class="open-btn">☰ Menu</div>
             </div>
         </div>
     </header>
 
     
-    <nav class="off-canvas-menu">
+    <nav id="offCanvas" class="off-canvas-menu">
         <button class="close-btn">CLOSE</button>
         <ul>
             <li><a href="#hero">Home</a></li>
