--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -20,9 +20,7 @@
                 My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
                 Technique d'Ettelbruck" with a focus on Commerce and Administration.
                 </p>
-                <div class="btn-link">
-                    <a href="/assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
-                </div>
+                <a class="normal-link" href="/assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" target="_blank">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
             </div>
         </div>
     </div>
