--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,11 +5,14 @@
                 <a href="#hero" class="cv-logo">
                     CV
                 </a>
+            </div>
+
+            <div>
                 <p>Copyright &#169; - <%= new Date().getFullYear() %></p>
             </div>
             
             <div>
-                <a class="normal-link" href="/terms" target="_blank">Private Policy<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                <a class="normal-link" href="/terms">Private Policy<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
             </div>
         </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
