--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,6 @@
 <body>
+    
+
     <header>
         <div class="header-wrapper">
             <a href="#hero" class=" header-container cv-logo">
@@ -16,17 +18,19 @@
         </div>
     </header>
 
-    
-    <nav id="offCanvas" class="off-canvas-menu">
-        <button class="close-btn">CLOSE</button>
-        <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#goal">Goal</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <div class="overlay">
+        <div class="close-btn">CLOSE</div>
+
+        <nav class="off-canvas-menu">
+            <ul>
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#goal">Goal</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <main>
