--- a/public/css/components.css
+++ b/public/css/components.css
@@ -13,8 +13,8 @@ header {
     align-items: center;
 }
 
-.header-wrapper a,
-.header-wrapper li {
+.off-canvas-menu a,
+.off-canvas-menu li {
     list-style-type: none;
     text-decoration: none;
 }
@@ -28,10 +28,6 @@ header {
     font-weight: 900;
     color: #595959;
     text-decoration: none;
-}
-
-.open-btn {
-    cursor: pointer;
 }
 
 /** Language Dropdown ****/
@@ -64,18 +60,44 @@ header {
 
 /** OffCanvas Menu****/
 
-
-#offCanvas {
-    width: 100vw;
-    height: 100vh;
-    background-color: rebeccapurple;
+.overlay {
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    visibility: hidden;
     z-index: 10;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.visibility { visibility: visible; }
+.off-canvas-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
-.visibility-none { visibility: none; }
+.open-btn {
+    cursor: pointer;
+}
+
+.visible {
+    opacity: 1;
+    visibility: visible;
+    transition: 0.5s;
+}
+
+.off-canvas-menu {
+    z-index: 10;
+    padding: 1rem;
+    
+}
+
 
 /**
 .off-canvas-menu {
@@ -125,37 +147,6 @@ header {
     overflow-y: auto;
 }
 **/
-/** Buttons***/
-
-.btn-link {
-    position: relative;
-    display: inline-block;
-}
-
-.btn-link a {
-    text-decoration: none;
-    font-family: inherit;
-    color: white;
-    font-weight: 900;
-    transition: 0.5s;
-    text-transform: uppercase;
-}
-
-.btn-link::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 2px;
-    background-color: white;
-    transition: width 0.4s ease-in-out;
-    z-index: 0;
-}
-
-.btn-link:hover::before {
-    width: 100%;
-}
 
 /** Hero Section****/
 .two-columns img {
