--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -5,22 +5,24 @@
 <section id="hero">
     <div class="wrapper">
         <div class="two-columns">
-            <div class="container">
+            <div class="container center">
                 <img src="/assets/img/portrait-cv.png" alt="Portait Image">
             </div>
     
-            <div class="container">
-                <h1>
-                    <span>Aspiring</span>
-                    <span>Business</span>
-                    <span>Professional</span>
-                </h1>
-                <h5>High School Graduate in Commerce and Administration</h5>
-                <p>
-                My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
-                Technique d'Ettelbruck" with a focus on Commerce and Administration.
-                </p>
-                <a class="normal-link" href="/assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" target="_blank">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+            <div class="container center">
+                <div class="text">
+                    <h1>
+                        <span>Aspiring</span>
+                        <span>Business</span>
+                        <span>Professional</span>
+                    </h1>
+                    <h5>High School Graduate in Commerce and Administration</h5>
+                    <p>
+                    My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
+                    Technique d'Ettelbruck" with a focus on Commerce and Administration.
+                    </p>
+                    <a class="normal-link" href="/assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" target="_blank">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                </div>
             </div>
         </div>
     </div>
@@ -37,11 +39,11 @@
         </div>
 
         <div class="two-columns">
-            <div class="container">
+            <div class="container center">
                 <img src="/assets/img/wall-street-plates.png" alt="wall street plate">
             </div>
 
-            <div class="container">
+            <div class="container center">
                 <div class="text">
                     <h3>
                         <span>I aspire to</span>
@@ -169,11 +171,11 @@
         </div>
 
         <div class="two-columns">
-            <div class="container">
+            <div class="container center">
                 <img src="/assets/img/library.png" alt="pile of books">
             </div>
 
-            <div class="container">
+            <div class="container center">
                 <div class="text">
                     <h3>
                         <span>Life long learning</span>
@@ -393,11 +395,11 @@
         </div>
 
         <div class="two-columns">
-            <div class="container">
+            <div class="container center">
                 <img src="/assets/img/pocket-watch.png" alt="pocket watch">
             </div>
 
-            <div class="container">
+            <div class="container center">
                 <div class="text">
                     <h3>
                         <span>Leveraging internships</span>
@@ -527,11 +529,11 @@
         </div>
 
         <div class="two-columns">
-            <div class="container">
+            <div class="container center">
                 <img src="/assets/img/rubics-cube.png" alt="rubics cube">
             </div>
 
-            <div class="container">
+            <div class="container center">
                 <div class="text">
                     <h3>
                         <span>Core competencies</span>
@@ -1428,7 +1430,7 @@
         </div>
 
         <div class="two-columns">
-            <div class="container">
+            <div class="container center">
                 <div class="in-touch">
                     <div>
                         <a href="mailto:gomeskevin.office@gmail.com">
@@ -1444,7 +1446,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container center">
                 <div class="text">
                     <h3>
                         <span>Get in touch</span>
