--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -287,7 +287,7 @@
 
                 <div class="column-list">
                     <div class="column-box">
-                        <img src="/assets/svg/logos/ltett-logo.svg" alt="Ltett logo">
+                        <img class="logo-svg" src="/assets/svg/logos/ltett-logo.svg" alt="Ltett logo">
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
                         <span class="white-2">Division of Commerce and Administration</span>
                         <span class="white-3">4GCM, 3GCM, 2GCC & 1GCC</span>
@@ -427,7 +427,7 @@
                 </div>
                 <div class="column-list">
                     <div class="column-box">
-                        <img src="/assets/svg/logos/lampertz-stone-designer-logo.svg" alt="Lampertz Logo">
+                        <img class="logo-svg" src="/assets/svg/logos/lampertz-stone-designer-logo.svg" alt="Lampertz Logo">
                         <span class="gray-1">Informational Internship</span>
                         <span class="white-2">Lampertz Stone Designer</span>
                         <p>
@@ -477,7 +477,7 @@
 
                 <div class="column-list">
                     <div class="column-box">
-                        <img src="/assets/svg/logos/pharmacie-hosingen-logo.svg" alt="Pharmacie Hosingen Logo">
+                        <img class="logo-svg" src="/assets/svg/logos/pharmacie-hosingen-logo.svg" alt="Pharmacie Hosingen Logo">
                         <span class="gray-1">Practical Internship</span>
                         <span class="white-2">Pharmacie de Hosingen</span>
                         <p>
