--- a/public/css/base.css
+++ b/public/css/base.css
@@ -32,6 +32,12 @@ h3 { font-weight: 800;}
 
 h1 {
     font-size: 2rem;
+    line-height: 1.2;
+}
+
+h3 {
+    font-size: 1.5rem;
+    line-height: 1.2;
 }
 
 h4 {
@@ -42,8 +48,11 @@ h4 {
 
 h5 {
     color: #595959;
+    font-size: 1rem;
+    line-height: 1.2;
 }
-p {
+p,
+.accordion-content {
     font-weight: 200;
     font-size: 0.85rem;
 }
@@ -55,8 +64,16 @@ p {
     gap: 0.5rem;
 }
 
+.column-box {
+    margin: 2rem 0;
+}
+
 .flex-title {
     margin: 2rem 0;
+}
+
+.normal-link {
+    margin: 1rem 0;
 }
 
 
