--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -302,7 +302,13 @@
                             <div class="accordion-item">
                                 <span class="gray-1">Relevant Coursework</span>
                                 <button class="accordion-header" aria-expanded="false">
-                                    Business Economics
+                                    <div class="accordion-container">
+                                        <span class="white-2">Business Economics</span>
+                                    </div>
+    
+                                    <div class="accordion-container">
+                                        <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                    </div>
                                 </button>
 
                                 <div class="accordion-content" hidden>
@@ -317,7 +323,13 @@
 
                             <div class="accordion-item">
                                 <button class="accordion-header" aria-expanded="false">
-                                    Political Economy
+                                    <div class="accordion-container">
+                                        <span class="white-2">Political Economy</span>
+                                    </div>
+    
+                                    <div class="accordion-container">
+                                        <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                    </div>
                                 </button>
 
                                 <div class="accordion-content" hidden>
@@ -329,7 +341,13 @@
 
                             <div class="accordion-item">
                                 <button class="accordion-header" aria-expanded="false">
-                                    Accountancy
+                                    <div class="accordion-container">
+                                        <span class="white-2">Accountancy</span>
+                                    </div>
+    
+                                    <div class="accordion-container">
+                                        <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                    </div>
                                 </button>
 
                                 <div class="accordion-content" hidden>
