--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -184,9 +184,7 @@
                     </h3>
                     <h5>In the constantly evolving job market, it's vital</h5>
                     <p>
-                        From an early age, I've been captivated by the intricacies of finance and economics. 
-                        Whether exploring budgets, assisting with financial tasks, or collaborating on team 
-                        projects, I'm eager to apply my growing skills to real-world financial scenarios. My 
+                        From an early age, I've been captivated by the intricacies of finance and economics. My 
                         high school education has given me a strong foundation in financial principles and 
                         business management. I have a passion for finance, investment, and entrepreneurship, I am excited to contribute my skills 
                         and enthusiasm to a forward-thinking financial team.
@@ -527,8 +525,7 @@
                             <li>Assisted with inventory management, ensured that medications and supplies 
                                 were adequately stocked and organized</li>
                             <li>Conducted regular inventory checks, managing stock levels and helped reorder products as needed</li>
-                            <li>Supported pharmacy staff in maintaining accurate records</li>
-                            <li>Developed a keen understanding of inventory control processes</li>
+                            <li>Supported pharmacy staff in maintaining accurate records. Developed a keen understanding of inventory control processes</li>
                         </ul>
                     </div>
                 </div>
