--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -1470,8 +1470,8 @@
                     <h5>Connect with me on my social media profile</h5>
                     <p>
                         I'm always open to discussing new opportunities, collaborations, or any questions you may 
-                        have. Whether you're interested in connecting about financial projects, seeking advice, or 
-                        just want to have a conversation, feel free to reach out.
+                        have. Whether you're interested in connecting about financial projects, potentially hiring me, or 
+                        just want to have a conversation, feel free to reach out. Select either Gmail or LinkedIn.
                     </p>
                 </div>
             </div>
