--- a/public/css/base.css
+++ b/public/css/base.css
@@ -62,6 +62,10 @@ h5 {
     line-height: 1.2;
 }
 
+.gray-1,
+.title-1 { color: #595959;}
+.white-2 { font-weight: 500;}
+
 .gray-1 {
     font-size: 0.95rem;
 }
