--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -101,10 +101,10 @@
                         <ul>
                             <li>
                                 <span class="gray-1">CFA Institute</span>
-                                <span class="white-2">CFA | Certified Financial Analyst</span>
+                                <span class="white-2">Chartered Financial Analyst</span>
                                 <p>
-                                    A distinction awarded to students with outstanding marks
-                                    and examplary behavior.
+                                    A program is a postgraduate professional certification offered internationally by the US-based CFA Institute to investment 
+                                    and financial professionals.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
@@ -136,7 +136,7 @@
                         <ul>
                             <li>
                                 <span class="gray-1">Mid-level</span>
-                                <span class="white-2">Accountant</span>
+                                <span class="white-2">In</span>
                                 <p>
                                     I have interested in the field of accounting.
                                 </p>
@@ -148,7 +148,7 @@
                         <ul>
                             <li>
                                 <span class="gray-1">Higher Position</span>
-                                <span class="white-2">Accountant</span>
+                                <span class="white-2">In </span>
                                 <p>
                                     I have interested in the field of accounting.
                                 </p>
