--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -21,7 +21,7 @@
                     My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
                     Technique d'Ettelbruck" with a focus on Commerce and Administration.
                     </p>
-                    <a class="normal-link" href="/check" target="_blank">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                    <a class="normal-link" href="/check">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                 </div>
             </div>
         </div>
