--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -103,8 +103,7 @@
                                 <span class="gray-1">CFA Institute</span>
                                 <span class="white-2">Chartered Financial Analyst</span>
                                 <p>
-                                    A program is a postgraduate professional certification offered internationally by the US-based CFA Institute to investment 
-                                    and financial professionals.
+                                    A program that is a postgraduate professional certification offered internationally by the US-based CFA Institute to investment and financial professionals.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
