--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -1,6 +1,6 @@
-<%- include("../partials/header.ejs") %>
+<%- include("../partials/header-en.ejs") %>
 
-<%- include("../partials/navbar.ejs") %>
+<%- include("../partials/navbar-en.ejs") %>
 
 <section id="hero">
     <div class="wrapper">
@@ -21,7 +21,7 @@
                     My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
                     Technique d'Ettelbruck" with a focus on Commerce and Administration.
                     </p>
-                    <a class="normal-link" href="/check">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                    <a class="normal-link" href="/check-en">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                 </div>
             </div>
         </div>
